Added Subcription Model, Offline page & notification handler

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -6,6 +6,8 @@ SilverStripe\Control\Director:
   rules:
     'manifest.json': 'SilverStripePWA\Controllers\ManifestController'
     'service-worker.js': 'SilverStripePWA\Controllers\ServiceWorkerController'
+    'notifications.js': 'SilverStripePWA\Controllers\NotificationController'
+
     
 SilverStripe\SiteConfig\SiteConfig:
     extensions:
