--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "silverstripe/framework": "^4",
         "silverstripe/vendor-plugin": "^1.0",
         "silverware/colorpicker": "^1.0",
-        "minishlink/web-push": "^5.2"
+        "minishlink/web-push": "^5.2",
+        "silverstripe/restfulserver": "dev-master"
 
     },
     "autoload": {
