--- a/_config/config.yml
+++ b/_config/config.yml
@@ -7,6 +7,7 @@ SilverStripe\Control\Director:
     'manifest.json': 'SilverStripePWA\Controllers\ManifestController'
     'service-worker.js': 'SilverStripePWA\Controllers\ServiceWorkerController'
     'notifications.js': 'SilverStripePWA\Controllers\NotificationController'
+    'offline.html': 'SilverStripePWA\Controllers\OfflineController'
 
     
 SilverStripe\SiteConfig\SiteConfig:
