--- a/_config/config.yml
+++ b/_config/config.yml
@@ -16,3 +16,6 @@ SilverStripe\SiteConfig\SiteConfig:
         - SilverStripePWA\Extensions\ManifestSiteConfigExtension
         - SilverStripePWA\Extensions\PushNotificationsSiteConfigExtension
 
+# SilverStripe\Lessons\ArticlePage:
+#     extensions:
+#         - SilverStripePWA\Extensions\PushExtension
