--- a/_config/config.yml
+++ b/_config/config.yml
@@ -18,4 +18,4 @@ SilverStripe\SiteConfig\SiteConfig:
 
 # SilverStripe\Lessons\ArticlePage:
 #     extensions:
-#         - SilverStripePWA\Extensions\PushExtension
+#         - SilverStripePWA\Extensions\PushArticleExtension
