--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: php
 
+php:
+  - 7.1
+
 before_script:
   - composer validate
   - composer require silverstripe/installer:^4.0 --no-update
